fix: add links to sidenav on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,6 @@ div.about-page .pic {
     justify-content: center;
 }
 
-.talks-page a {
+.about-page a, .talks-page a {
     color: blue;
 }
